--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "version": "0.1.0",
   "type": "module",
   "engines": {
-    "vscode": "^1.75.0"
+    "vscode": "^1.0.0"
   },
   "categories": [
     "Themes"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yklcs/deol-vscode"
+  },
+  "icon": "https://raw.githubusercontent.com/yklcs/deol-vscode/main/icon.png",
   "scripts": {
     "build": "tsc && node ./out/scripts/build.js",
     "watch": "tsc -w & nodemon -w out ./out/scripts/build.js"
@@ -27,9 +32,7 @@
     "@types/chroma-js": "^2.4.0",
     "@types/node": "^18.13.0",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.5"
-  },
-  "dependencies": {
+    "typescript": "^4.9.5",
     "chroma-js": "^2.4.2"
   }
 }
