--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
   "devDependencies": {
     "@types/chroma-js": "^2.4.0",
     "@types/node": "^18.13.0",
+    "@vscode/vsce": "^2.18.0",
+    "chroma-js": "^2.4.2",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.5",
-    "chroma-js": "^2.4.2"
+    "typescript": "^4.9.5"
   }
 }
